*2.0.0 [Preview Release]* (September 29th, 2007) [Includes duplicates of changes from 1.14.2 - 1.15.3]

* Make size for has_many :through use counter cache if it exists.  Closes #9734 [xaviershay]

* Remove DB2 adapter since IBM chooses to maintain their own adapter instead.  [Jeremy Kemper]

* Extract Oracle, SQLServer, and Sybase adapters into gems.  [Jeremy Kemper]

* Added fixture caching that'll speed up a normal fixture-powered test suite between 50% and 100% #9682 [frederick.cheung@gmail.com]

* Correctly quote id list for limited eager loading.  #7482 [tmacedo]

* Fixed that using version-targetted migrates would fail on loggers other than the default one #7430 [valeksenko]

* Fixed rename_column for SQLite when using symbols for the column names #8616 [drodriguez]

* Added the possibility of using symbols in addition to concrete classes with ActiveRecord::Observer#observe #3998 [robbyrussell/tarmo]

* Added ActiveRecord::Base#to_json/from_json [DHH/chuyeow]

* Added ActiveRecord::Base#from_xml [DHH]. Example:

    xml = "<person><name>David</name></person>"
    Person.new.from_xml(xml).name # => "David"

* Define dynamic finders as real methods after first usage. [bscofield]

* Deprecation: remove deprecated threaded_connections methods. Use allow_concurrency instead.  [Jeremy Kemper]

* Associations macros accept extension blocks alongside modules.  #9346 [Josh
Peek]

* Speed up and simplify query caching.  [Jeremy Kemper]

* connection.select_rows 'sql' returns an array (rows) of arrays (field values).  #2329 [Michael Schuerig]

* Eager loading respects explicit :joins.  #9496 [dasil003]

* Extract Firebird, FrontBase, and OpenBase adapters into gems.  #9508, #9509, #9510 [Jeremy Kemper]

* RubyGem database adapters: expects a gem named activerecord-<database>-adapter with active_record/connection_adapters/<database>_adapter.rb in its load path.  [Jeremy Kemper]

* Added block-acceptance to JavaScriptHelper#javascript_tag #7527 [BobSilva/tarmo/rmm5t]
